k8s-yml-file/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecomm-svc
spec:
  type: ClusterIP
  selector:
    app: ecomm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  



###
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-svc
# spec:
#   type: NodePort  ## this is default if we do not type in service definition
#   selector:
#     app: nginx
#   ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
